-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.15
-
None
-
-
83adde7eeab94c2e6d6a756cf268a6c664cfb309 (qt/qtwebengine/5.15)
WebEngine build fails in COIN for proposed 5.15.0 beta2 content with following error:
/home/qt/work/build/build/tmp/work/core2-32-poky-linux-musl/qtwebengine/5.15.0+gitAUTOINC+5d9b86dff6_4ea2213507-r0/build/src/core/release/obj/qtwebengine_sources/chrome_command_line_pref_store.o:chrome_command_line_pref_store.cc:ChromeCommandLinePrefStore::string_switch_map_: error: undefined reference to 'language::prefs::kApplicationLocale'
collect2: error: ld returned 1 exit status
It seems the last change for webengine that got in for 5.15 beta2 breaks the build: "5d9b86dff687621cad7cd1a9075d35fc49ed96e1 Update chromium + simplify snapshot"