Fix build with spell-checking disabled

Task-number: QTBUG-82894
Change-Id: Ie5d8ddd9b0d68390d1d8d2415629c0e85e33351e
Reviewed-by: Michal Klocek <michal.klocek@qt.io>